Манифесты и приложение (п. 1.3 и п. 1.4)/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: 109.120.183.68:5000/rest_api:latest     
          imagePullPolicy: IfNotPresent     
          ports:
            - containerPort: 6000
          resources:
            requests:
              memory: 128Mi
              cpu: 125m
            limits:
              memory: 256Mi
              cpu: 250m
          command: ["bash"]
          args: ["run_app.sh"] 
          livenessProbe:
            httpGet:
              path: /users
              port: 6000
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /users
              port: 6000
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /users
              port: 6000
            initialDelaySeconds: 20
            failureThreshold: 5
            periodSeconds: 10
      imagePullSecrets:
        - name: regcred
