Манифесты и приложение (п. 1.3 и п. 1.4)/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  ports:
  - port: 80
    targetPort: 6000
    name: http
  selector:
    app: api
  type: ClusterIP
