Манифесты и приложение (п. 1.3 и п. 1.4)/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /app_api
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
